WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153593
Safari Crashes if audio.src is changed while connected to AudioAnalyserNode
https://bugs.webkit.org/show_bug.cgi?id=153593
Summary
Safari Crashes if audio.src is changed while connected to AudioAnalyserNode
Gregg Tavares
Reported
2016-01-28 08:48:13 PST
Example
http://greggman.com/downloads/examples/safari-audio-issue/safari-issue.html
Attachments
crash report
(87.81 KB, text/plain)
2016-02-01 07:21 PST
,
Gregg Tavares
no flags
Details
Patch
(7.12 KB, patch)
2016-03-23 22:40 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(7.32 KB, patch)
2016-03-23 22:48 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2016-01-30 23:03:16 PST
I cannot reproduce this with Safari 9.0.3 (shipping WebKit). I only get an exception in console: InvalidStateError: DOM Exception 11: An attempt was made to use an object that is not, or is no longer, usable. createMediaElementSource safari-issue.html:92 handleCanplay safari-issue.html:92
Gregg Tavares
Comment 2
2016-02-01 07:04:43 PST
Try this 1. Make sure the WebInspector is NOT open (nor any other JavaScript tools) 2. Go to
http://greggman.com/downloads/examples/safari-audio-issue/safari-issue.html
Do **NOT** click the button 3. Go to
http://google.com
4. Go to
http://greggman.com/downloads/examples/safari-audio-issue/safari-issue.html
What happens for me at step 4 is safari doesn't play the music like it did in step 2 I might have to repeat steps 3 and 4. This is in Safari 9.0.3
Gregg Tavares
Comment 3
2016-02-01 07:21:53 PST
Created
attachment 270385
[details]
crash report
Gregg Tavares
Comment 4
2016-02-01 07:23:27 PST
Here's a video of it crashing. Previously attached crash report
https://youtu.be/qcERq9gphqk
Safari 9.0.3 If you can't repo try hitting refresh quickly in succession while the music is playing
Gregg Tavares
Comment 5
2016-02-01 07:56:06 PST
Here's a video of the visit, visit something else, visit again issue
https://youtu.be/VJ-pCi5oCwg
Gregg Tavares
Comment 6
2016-02-01 07:56:56 PST
the URL used in the video above is
http://twgljs.org/examples/dynamic-buffers.html
but
http://greggman.com/downloads/examples/safari-audio-issue/safari-issue.html
seems to work for that issue just ask well
Alexey Proskuryakov
Comment 7
2016-02-01 09:51:20 PST
I could reproduce after a few reloads. Thank you!
rdar://problem/23648082
Jer Noble
Comment 8
2016-03-23 22:39:02 PDT
***
Bug 155833
has been marked as a duplicate of this bug. ***
Jer Noble
Comment 9
2016-03-23 22:40:34 PDT
Created
attachment 274821
[details]
Patch
Jer Noble
Comment 10
2016-03-23 22:48:34 PDT
Created
attachment 274822
[details]
Patch
WebKit Commit Bot
Comment 11
2016-03-24 17:52:41 PDT
Comment on
attachment 274822
[details]
Patch Clearing flags on attachment: 274822 Committed
r198654
: <
http://trac.webkit.org/changeset/198654
>
WebKit Commit Bot
Comment 12
2016-03-24 17:52:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug