Source/WebCore/platform/graphics/avfoundation/AudioSourceProviderAVFObjC.mm
@@ -38,6 +38,7 @@
 #import <AVFoundation/AVAudioMix.h>
 #import <AVFoundation/AVMediaFormat.h>
 #import <AVFoundation/AVPlayerItem.h>
+#import <mutex>
 #import <objc/runtime.h>
 #import <wtf/MainThread.h>
 
@@ -78,10 +79,6 @@ RefPtr<AudioSourceProviderAVFObjC> AudioSourceProviderAVFObjC::create(AVPlayerIt
 
 AudioSourceProviderAVFObjC::AudioSourceProviderAVFObjC(AVPlayerItem *item)
     : m_avPlayerItem(item)
-    , m_writeCount(0)
-    , m_readCount(0)
-    , m_paused(true)
-    , m_client(nullptr)
 {
 }
 
@@ -92,19 +89,30 @@ AudioSourceProviderAVFObjC::~AudioSourceProviderAVFObjC()
 
 void AudioSourceProviderAVFObjC::provideInput(AudioBus* bus, size_t framesToProcess)
 {
-    if (!m_avPlayerItem)
-        return;
-
-    uint64_t startFrame = 0;
-    uint64_t endFrame = 0;
-    m_ringBuffer->getCurrentFrameBounds(startFrame, endFrame);
-
-    if (m_writeCount <= m_readCount + m_writeAheadCount) {
+    // Protect access to m_ringBuffer by try_locking the mutex. If we failed
+    // to aquire, a re-configure is underway, and m_ringBuffer is unsafe to access.
+    // Emit silence.
+    std::unique_lock<Lock> lock(m_mutex, std::try_to_lock);
+    if (!lock.owns_lock() || !m_ringBuffer) {
         bus->zero();
         return;
     }
 
-    size_t framesAvailable = static_cast<size_t>(endFrame - (m_readCount + m_writeAheadCount));
+    uint64_t startFrame = 0;
+    uint64_t endFrame = 0;
+    uint64_t seekTo = m_seekTo.exchange(NoSeek);
+    uint64_t writeAheadCount = m_writeAheadCount.load();
+    if (seekTo != NoSeek)
+        m_readCount = seekTo;
+
+    m_ringBuffer->getCurrentFrameBounds(startFrame, endFrame);
+
+    size_t framesAvailable = static_cast<size_t>(endFrame - (m_readCount + writeAheadCount));
+    if (!framesAvailable) {
+        bus->zero();
+        return;
+    }
+
     if (framesAvailable < framesToProcess) {
         framesToProcess = framesAvailable;
         bus->zero();
@@ -277,6 +285,8 @@ void AudioSourceProviderAVFObjC::prepare(CMItemCount maxFrames, const AudioStrea
 {
     ASSERT(maxFrames >= 0);
 
+    std::lock_guard<Lock> lock(m_mutex);
+
     m_tapDescription = std::make_unique<AudioStreamBasicDescription>(*processingFormat);
     int numberOfChannels = processingFormat->mChannelsPerFrame;
     size_t bytesPerFrame = processingFormat->mBytesPerFrame;
@@ -321,6 +331,8 @@ void AudioSourceProviderAVFObjC::prepare(CMItemCount maxFrames, const AudioStrea
 
 void AudioSourceProviderAVFObjC::unprepare()
 {
+    std::lock_guard<Lock> lock(m_mutex);
+
     m_tapDescription = nullptr;
     m_outputDescription = nullptr;
     m_ringBuffer = nullptr;
@@ -358,13 +370,17 @@ void AudioSourceProviderAVFObjC::process(CMItemCount numberOfFrames, MTAudioProc
         // Only check the write-ahead time when playback begins.
         m_paused = false;
         MediaTime earlyBy = rangeStart - currentTime;
-        m_writeAheadCount = m_tapDescription->mSampleRate * earlyBy.toDouble();
+        m_writeAheadCount.store(m_tapDescription->mSampleRate * earlyBy.toDouble());
     }
+
+    uint64_t startFrame = 0;
+    uint64_t endFrame = 0;
+    m_ringBuffer->getCurrentFrameBounds(startFrame, endFrame);
 
     // Check to see if the underlying media has seeked, which would require us to "flush"
     // our outstanding buffers.
     if (rangeStart != m_endTimeAtLastProcess)
-        m_readCount = m_writeCount;
+        m_seekTo.store(endFrame);
 
     m_startTimeAtLastProcess = rangeStart;
     m_endTimeAtLastProcess = rangeStart + rangeDuration;
@@ -372,10 +388,9 @@ void AudioSourceProviderAVFObjC::process(CMItemCount numberOfFrames, MTAudioProc
     // StartOfStream indicates a discontinuity, such as when an AVPlayerItem is re-added
     // to an AVPlayer, so "flush" outstanding buffers.
     if (flagsOut && *flagsOut & kMTAudioProcessingTapFlag_StartOfStream)
-        m_readCount = m_writeCount;
+        m_seekTo.store(endFrame);
 
-    m_ringBuffer->store(bufferListInOut, itemCount, m_writeCount);
-    m_writeCount += itemCount;
+    m_ringBuffer->store(bufferListInOut, itemCount, endFrame);
 
     // Mute the default audio playback by zeroing the tap-owned buffers.
     for (uint32_t i = 0; i < bufferListInOut->mNumberBuffers; ++i) {
